@@ -14,16 +14,17 @@ The good folks from
 * KRFB (I think it was Tim Jansen)
 helped also a lot (some *big* bugs!).
 
-Karl Runge provided an x11vnc, which is a much, much improved version of my
+Karl Runge provides an x11vnc, which is a much, much improved version of my
 original proof-of-concept. It really deserves to replace the old version,
-as it is a state-of-the-art, fast and usable program by now!
+as it is a state-of-the-art, fast and usable program by now! However, he
+maintains it and improves it still in amazing ways!
 
 Occasional important patches were sent by (in order I found the names in my
 archives and please don't beat me, if I forgot you, but just send me an
 email!): Akira Hatakeyama, Karl J. Runge, Justin "Zippy" Dearing,
 Oliver Mihatsch, Greg Sternberg, Werner Hofer, Giampiero Giancipoli,
 Glenn Mabutt, Paul Kreiner, Erik Kunze, Mike Frysinger, Martin Waitz,
-Mark McLoughlin.
+Mark McLoughlin, Paul Fox, Juan Jose Costello.
 
 Probably I forgot quite a few people sending a patch here and there, which
 really made a difference. Without those, some obscure bugs still would
