@@ -19,7 +19,7 @@ int main(int argc,char** argv)
   double r,phi;
   
   rfbScreenInfoPtr server=rfbGetScreen(&argc,argv,width,height,8,3,4);
-  server->frameBuffer=malloc(width*height*4);
+  server->frameBuffer=(char*)malloc(width*height*4);
   initBackground(server);
   server->rfbDeferUpdateTime=0;
   rfbInitServer(server);
