@@ -258,7 +258,7 @@ void MakeRichCursor(rfbScreenInfoPtr rfbScreen)
   c=rfbScreen->cursor = rfbMakeXCursor(w,h,bitmap,bitmap);
   c->xhot = 16; c->yhot = 24;
 
-  c->richSource = malloc(w*h*bpp);
+  c->richSource = (char*)malloc(w*h*bpp);
   for(j=0;j<h;j++) {
     for(i=0;i<w;i++) {
       c->richSource[j*w*bpp+i*bpp+0]=i*0xff/w;
